[gd_scene load_steps=9 format=3 uid="uid://1w71n7uatf7b"]

[ext_resource type="Script" path="res://scenes/fight_game/fight_game.gd" id="1_sfgrc"]
[ext_resource type="Texture2D" uid="uid://fkf07hnu4ev1" path="res://assets/characters/boy-1.png" id="2_50jvd"]
[ext_resource type="Texture2D" uid="uid://dci36xbj1ir4r" path="res://assets/sprites/icon-zapper.png" id="3_a6p3t"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8t20j"]
a = Vector2(130, 0)
b = Vector2(512, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r86mb"]
size = Vector2(155, 128)

[sub_resource type="GDScript" id="GDScript_o0vve"]
resource_name = "ZapperArea"
script/source = "extends Area2D

signal zapper_depleted

var zapper_max_charge: int = 10
var zapper_charge: int = 0


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	monitoring = (zapper_charge > 0)
	$ZapperSprite.visible = (zapper_charge > 0)


func _on_body_entered(body: Node2D) -> void:
	if (zapper_charge <= 0):
		return
	body.queue_free()
	zapper_charge -= 1

	if !zapper_charge:
		zapper_depleted.emit()


func recharge() -> void:
	zapper_charge = zapper_max_charge
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5sve"]
size = Vector2(25, 36)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kotbo"]
a = Vector2(136, 0)
b = Vector2(291, 0)

[node name="FightGame" type="Node2D"]
script = ExtResource("1_sfgrc")

[node name="Background" type="ColorRect" parent="."]
visible = false
offset_right = 512.0
offset_bottom = 512.0
color = Color(0.419813, 0.419813, 0.419813, 1)

[node name="Human" type="Sprite2D" parent="."]
position = Vector2(258, 488)

[node name="HumanSprite" type="Sprite2D" parent="Human"]
position = Vector2(4.99999, 38)
scale = Vector2(0.150685, 0.150685)
texture = ExtResource("2_50jvd")

[node name="MosquitoSpawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="MosquitoSpawnArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MosquitoSpawnArea"]
shape = SubResource("SegmentShape2D_8t20j")

[node name="EndArea" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea"]
position = Vector2(262.5, 544)
shape = SubResource("RectangleShape2D_r86mb")

[node name="ZapperArea" type="Area2D" parent="."]
position = Vector2(155, 432)
collision_layer = 0
script = SubResource("GDScript_o0vve")

[node name="ZapperSprite" type="Sprite2D" parent="ZapperArea"]
position = Vector2(0.75, -8.25)
scale = Vector2(0.135, 0.135)
texture = ExtResource("3_a6p3t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZapperArea"]
position = Vector2(0.25, 0.75)
shape = SubResource("RectangleShape2D_k5sve")

[node name="TargetArea" type="Area2D" parent="."]
position = Vector2(49, 600)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea"]
shape = SubResource("SegmentShape2D_kotbo")

[connection signal="timeout" from="MosquitoSpawnTimer" to="." method="_on_mosquito_spawn_timer_timeout"]
[connection signal="body_entered" from="EndArea" to="." method="_on_end_area_body_entered"]
[connection signal="body_entered" from="ZapperArea" to="ZapperArea" method="_on_body_entered"]
[connection signal="zapper_depleted" from="ZapperArea" to="." method="_on_zapper_depleted"]
